# colmap

./: .gitignore  CLAUDE.md  CMakeLists.txt  COLMAP_IMU_FORK_CAPABILITIES.md  build_colmap_imu.sh  rig_test_data.txt  setup_env.sh  test_image_extension.py
benchmark/reconstruction/evaluation/: utils.py
benchmark/runtime/: CMakeLists.txt  bundle_adjustment.cc
cmake/: FindDependencies.cmake
pycolmap/: CMakeLists.txt
python/: CMakeLists.txt  generate_stubs.sh
python/examples/: vi_optimization.py
src/colmap/base/: camera_test.cc  image_reader.cc  line.cc  warp.cc
src/colmap/controllers/: automatic_reconstruction.cc  automatic_reconstruction.h  incremental_mapper.cc  incremental_mapper.h
src/colmap/estimators/: CMakeLists.txt  block_covariance.cc  block_covariance.h  bundle_adjustment.cc  bundle_adjustment.h  bundle_adjustment_ceres.cc  bundle_adjustment_ceres.h  bundle_adjustment_test.cc  caspar_bundle_adjustment.cc  coordinate_frame_test.cc  cost_functions.h  cost_functions_test.cc  covariance.cc  cp_partitioning.cc  cp_partitioning.h  generalized_absolute_pose.cc  generalized_absolute_pose.h  generalized_absolute_pose_legacy.cc  generalized_absolute_pose_legacy.h  generalized_absolute_pose_test.cc  generalized_pose.cc  generalized_relative_pose.cc  generalized_relative_pose.h  generalized_relative_pose_legacy.cc  generalized_relative_pose_legacy.h  generalized_relative_pose_test.cc  imu_preintegration.cc  imu_preintegration.h  two_view_geometry.cc
src/colmap/exe/: CMakeLists.txt  feature.cc  gr6p_benchmark.cc  gui.h  rig_pose_test.cc  sfm.cc  vocab_tree.cc
(+57 files in other folders)
